--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,274 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Tinos&display=swap");
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table;
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+
+[dir="rtl"] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url("./ajax-loader.gif") center center no-repeat;
+}
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url("./fonts/slick.eot");
+  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Arrows */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+.slick-prev:hover, .slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  outline: none;
+  background: transparent;
+  color: transparent;
+}
+
+.slick-prev:hover:before, .slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
+  opacity: 1;
+}
+
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before {
+  opacity: 0.25;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  color: #273718;
+  opacity: 0.75;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev {
+  left: -25px;
+}
+
+[dir="rtl"] .slick-prev {
+  left: auto;
+  right: -25px;
+}
+
+.slick-prev:before {
+  content: "<";
+}
+
+[dir="rtl"] .slick-prev:before {
+  content: ">";
+}
+
+.slick-next {
+  right: -25px;
+}
+
+[dir="rtl"] .slick-next {
+  left: -25px;
+  right: auto;
+}
+
+.slick-next:before {
+  content: ">";
+}
+
+[dir="rtl"] .slick-next:before {
+  content: "<";
+}
+
+/* Dots */
+.slick-dotted.slick-slider {
+  margin-bottom: 30px;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0px;
+  font-size: 0px;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.slick-dots li button:hover, .slick-dots li button:focus {
+  outline: none;
+}
+
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 1;
+}
+
+.slick-dots li button:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "•";
+  width: 20px;
+  height: 20px;
+  font-family: "slick";
+  font-size: 6px;
+  line-height: 20px;
+  text-align: center;
+  color: black;
+  opacity: 0.25;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75;
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
@@ -119,49 +389,26 @@ html, body {
 }
 
 .title .title__img-background h1 {
+  text-transform: uppercase;
   position: absolute;
   top: 50px;
   left: 100px;
   font-family: "Lora", serif;
   font-style: italic;
-}
-
-.title .title__img-background h1 {
-  font-size: 24px;
-}
-
-@media (min-width: 400px) {
-  .title .title__img-background h1 {
-    font-size: calc( 24px +  num(32px)-num(24px) *  (100vw - 400px) /  num(1000px)-num(400px));
-  }
-}
-
-@media (min-width: 1000px) {
-  .title .title__img-background h1 {
-    font-size: 32px;
-  }
+  font-size: calc(24px + 16 * (100vw / 1280));
 }
 
 .title .title__img-background p {
   position: absolute;
-  bottom: 200px;
-  left: 700px;
+  bottom: 50px;
+  left: 500px;
   font-family: "Lora", serif;
+  font-size: calc(16px + 8 * (100vw / 1280));
 }
 
-.title .title__img-background p {
-  font-size: 16px;
-}
-
-@media (min-width: 400px) {
+@media (max-width: 560px) {
   .title .title__img-background p {
-    font-size: calc( 16px +  num(24px)-num(16px) *  (100vw - 400px) /  num(1000px)-num(400px));
-  }
-}
-
-@media (min-width: 1000px) {
-  .title .title__img-background p {
-    font-size: 24px;
+    display: none;
   }
 }
 
@@ -172,8 +419,66 @@ html, body {
 }
 
 section {
-  max-width: 1400px;
-  margin: 70px auto;
+  width: 100%;
+  padding-top: 55px;
+  margin-top: -55px;
+}
+
+section::before {
+  content: '';
+  display: block;
+  height: 3px;
+  width: 90%;
+  background-color: #f79a9a;
+  margin: 150px auto 50px;
+}
+
+section .info {
+  max-width: 1200px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+section .info .info__text {
+  margin: 0 7%;
+}
+
+section .info .info__text h1 {
+  font-size: calc(24px + 16 * (100vw / 1280));
+}
+
+section .info .info__text p {
+  font-size: calc(16px + 8 * (100vw / 1280));
+  line-height: 40px;
+}
+
+section .info img.info__img {
+  margin: 0 7%;
+  width: 100%;
+}
+
+section .slider h1 {
+  text-align: center;
+  font-size: calc(24px + 16 * (100vw / 1280));
+  text-transform: uppercase;
+}
+
+section .slider .slider__main {
+  max-width: 80%;
+  margin: 40px auto;
+}
+
+section .slider .slider__main .slider__item {
+  max-width: 90%;
+}
+
+section .slider .slider__main .slider__item img {
+  width: 100%;
 }
 
 @media (max-width: 850px) {
@@ -251,5 +556,46 @@ section {
     left: 0;
     bottom: 0;
     top: 20px;
+  }
+  section::before {
+    margin: 20px auto;
+  }
+  section .info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  section .info .info__text h1 {
+    text-align: center;
+  }
+  section .info .info__text p {
+    font-size: calc(16px + 8 * (100vw / 1280));
+  }
+  section .info img.info__img {
+    max-width: 80%;
+    margin: 10px 10%;
+  }
+  section .info2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  section .info2 .info__text h1 {
+    text-align: center;
+  }
+  section .info2 .info__text p {
+    font-size: calc(16px + 8 * (100vw / 1280));
+  }
+  section .info2 img.info__img {
+    max-width: 80%;
+    margin: 10px 10%;
   }
 }
