--- a/sass/__slick-theme.scss
+++ b/sass/__slick-theme.scss
@@ -100,6 +100,7 @@ $slick-opacity-not-active: 0.25 !default;
         right: -25px;
     }
     &:before {
+        font-size: 34pt;
         content: $slick-prev-character;
         [dir="rtl"] & {
             content: $slick-next-character;
@@ -114,6 +115,7 @@ $slick-opacity-not-active: 0.25 !default;
         right: auto;
     }
     &:before {
+        font-size: 34pt;
         content: $slick-next-character;
         [dir="rtl"] & {
             content: $slick-prev-character;
