--- a/sass/style.scss
+++ b/sass/style.scss
@@ -114,13 +114,14 @@ h1{
     img.title__img{
         max-width: 100%;
         opacity: 0.1;
+        height: 92vh;
     }
     .title__img-background{
         top: 0;
         width: 100%;
         position: absolute;
         background-color: $mainColor;
-        height: 100%;
+        height: 92vh;
         h1{
             position: absolute;
             top: 50px;
@@ -351,6 +352,9 @@ section{
         }
     }
     .title{
+        img.title__img{
+            height: auto;
+        }
         .title__img-background{
             text-align: center;
             h1{
