--- a/css/style.css
+++ b/css/style.css
@@ -567,6 +567,8 @@ section .comments .comments__main .comments__item .item__text p {
 }
 
 form.form {
+  -webkit-box-shadow: 5px 5px 10px black;
+          box-shadow: 5px 5px 10px black;
   margin: 190px auto 100px;
   width: 80%;
   background-color: #85A98D;
@@ -578,48 +580,73 @@ form.form {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+form.form:hover {
+  -webkit-box-shadow: 10px 10px 20px black;
+          box-shadow: 10px 10px 20px black;
 }
 
 form.form .form__title {
+  color: #BB6C25;
   font-family: "Lora", serif;
-  width: 90%;
-  margin: 20px;
+  width: 100%;
+  padding: 20px 0;
   text-align: center;
   font-size: calc(24px + 16 * (100vw / 1280));
   text-transform: uppercase;
+  background-color: #273718;
+  border-bottom: 7px solid #BB6C25;
+  margin: 0 0 20px 0;
 }
 
 form.form .form__data {
-  font-style: italic;
+  color: #BB6C25;
   text-align: center;
   font-size: calc(16px + 8 * (100vw / 1280));
 }
 
 form.form .form__data input {
+  font-size: calc(14px + 6 * (100vw / 1280));
   width: 90%;
-  height: 30px;
+  height: 40px;
   text-align: center;
   margin: 0 0 20px 0;
+  color: #DEA05C;
+  border: 2px solid #BB6C25;
+  padding: 10px;
+  outline: none;
 }
 
 form.form .form__msg {
-  font-style: italic;
+  color: #BB6C25;
   text-align: center;
   font-size: calc(16px + 8 * (100vw / 1280));
 }
 
 form.form .form__msg textarea {
+  border: 2px solid #BB6C25;
+  font-size: calc(14px + 6 * (100vw / 1280));
   width: 90%;
   height: 50%;
   resize: none;
+  color: #DEA05C;
+  padding: 10px;
+  outline: none;
 }
 
 form.form .form__msg button {
+  border: 2px solid #BB6C25;
   margin: 40px 0 200px 0;
+  padding: 10px;
   width: 90%;
   font-size: calc(16px + 8 * (100vw / 1280));
   font-family: "Tinos", serif;
-  font-style: italic;
+  color: #BB6C25;
+  font-weight: 700;
+  border-radius: 10px;
 }
 
 .footer {
