--- a/css/style.css
+++ b/css/style.css
@@ -606,6 +606,7 @@ form.form .form__data {
   color: #BB6C25;
   text-align: center;
   font-size: calc(16px + 8 * (100vw / 1280));
+  font-weight: 700;
 }
 
 form.form .form__data input {
@@ -621,6 +622,7 @@ form.form .form__data input {
 }
 
 form.form .form__msg {
+  font-weight: 700;
   color: #BB6C25;
   text-align: center;
   font-size: calc(16px + 8 * (100vw / 1280));
