--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,7 +32,7 @@ $secondFont: 'Lora', serif;
 html, body{
     font-family: $firstFont;
 }
-h1{
+h2{
     color:$blackTextColor;
 }
 /////////
@@ -122,7 +122,7 @@ h1{
         position: absolute;
         background-color: $mainColor;
         height: 94vh;
-        h1{
+        h2{
             position: absolute;
             top: 50px;
             left: 100px;
@@ -166,7 +166,7 @@ section{
         .info__text{
             
             margin: 0 7%;
-            h1{
+            h2{
                 font-size: calc(24px + 16 * (100vw / 1280));
             }
             p{
@@ -191,7 +191,7 @@ section{
         }
     }
     .slider{
-        h1{
+        h2{
             text-align: center;
             font-size: calc(24px + 16 * (100vw / 1280));
         }
@@ -213,7 +213,7 @@ section{
         }
     }
     .comments{
-        h1{
+        h2{
             text-align: center;
             font-size: calc(24px + 16 * (100vw / 1280));
         }
@@ -236,7 +236,7 @@ section{
                         border-radius: 50%;
                         border: 2px solid goldenrod;
                     }
-                    h1{
+                    h2{
                         font-size: calc(25px + 16 * (100vw / 1280));
                         margin: 20px 50px 0 0;
                         font-style: italic;
@@ -373,8 +373,10 @@ form.form{
         width: 100%;
         text-align: center;
         font-size: calc(12px + 8 * (100vw / 1280));
-        background-color: #1e2715;
+        background-color: #283120;
+        font-weight: 700;
         padding: 10px 0;
+        color: goldenrod;
     }
 }
 @media (max-width: 850px){
@@ -433,7 +435,7 @@ form.form{
         }
         .title__img-background{
             text-align: center;
-            h1{
+            h2{
                 position: relative;
                 left: 0;
                 top: 10px;
@@ -454,7 +456,7 @@ form.form{
             display: flex;
             flex-direction: column;
             .info__text{
-                h1{
+                h2{
                     text-align: center;
                 }
                 p{
@@ -470,7 +472,7 @@ form.form{
             display: flex;
             flex-direction: column-reverse;
             .info__text{
-                h1{
+                h2{
                     text-align: center;
                 }
                 p{
