--- a/sass/style.scss
+++ b/sass/style.scss
@@ -120,7 +120,7 @@ h2{
         top: 0;
         width: 100%;
         position: absolute;
-        background-color: $mainColor;
+        background-color: rgba(70, 129, 83, 0.315);
         height: 94vh;
         h2{
             position: absolute;
