--- a/sass/style.scss
+++ b/sass/style.scss
@@ -265,10 +265,6 @@ form.form{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    &:hover{
-        box-shadow: 10px 10px 20px black;
-    }
-    transition: all .3s;
     .form__title{
         color:$blackTextColor;
         font-family: $secondFont;
@@ -309,7 +305,7 @@ form.form{
         textarea{
             border: 2px solid $blackTextColor;
             font-size: calc(14px + 6 * (100vw / 1280));
-            width: 90%;
+            width: 80%;
             height: 50%;
             resize: none;
             color:$textColor;
@@ -321,7 +317,7 @@ form.form{
             border: 2px solid $blackTextColor;
             margin: 40px 0 200px 0;
             padding: 10px;
-            width: 90%;
+            width: 80%;
             font-size: calc(16px + 8 * (100vw / 1280));
             font-family:$firstFont;
             color:$blackTextColor;
@@ -402,15 +398,24 @@ form.form{
             }
             .header__menu{
                 position: fixed;
-                top: -380px;
+                top: -600px;
                 left: 0;
-                width: 100%;
-                height: 380px;
+                width: 120%;
+                height: 600px;
                 background-color: $mainColor;
                 padding: 100px 0 0 0;
                 .header__list{
                     display: block;
                     li{
+                        &::before{
+                            margin: auto;
+                            content:'';
+                            display: block;
+                            height: 3px;
+                            width: 80%;
+                            background-color:$blackTextColor;
+                            margin: 30px 0;
+                        }
                         margin: 30px 10px 20px 30px;
                         .header__link{
                             font-weight: 700;
